# dbex

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
.decisions/: 0002-btree-map-vs-self-impl.md
benches/: comparison_bench.rs  insert_bench.rs  query_bench.rs  throughput_bench.rs
scripts/: compare_with_mongo.sh  setup_mongo.sh
src/: bson.rs  document.rs  lib.rs  main.rs  memtable.rs  ss_table.rs  sstable.rs  utils.rs  write_ahead_log.rs
src/wals/: cur.wal
tests/: bench.rs  integration_tests.rs  test_db.rs
