[package]
name = "dbex"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.3"
bson = "3.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.9.2"

[[bin]]
name = "mongo_bench"
path = "src/bin/mongo_bench.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "insert_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false
